// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patient actions fetchPatients()  a successful fetch 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_PATIENTS_REQUEST",
    },
  ],
  Array [
    Object {
      "patients": Object {
        "data": Array [
          1,
          2,
          3,
        ],
      },
      "type": "FETCH_PATIENTS_RESPONSE",
    },
  ],
]
`;

exports[`patient actions fetchPatients()  an unsuccessful fetch 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_PATIENTS_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "FETCH_PATIENTS_FAILURE",
    },
  ],
]
`;

exports[`patient actions fetchPatientsActivity()  a successful fetch 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_PATIENTSACTIVITY_REQUEST",
    },
  ],
  Array [
    Object {
      "activities": Object {
        "data": Array [
          1,
          2,
          3,
        ],
      },
      "type": "FETCH_PATIENTSACTIVITY_RESPONSE",
    },
  ],
]
`;

exports[`patient actions fetchPatientsActivity()  an unsuccessful fetch 1`] = `
Array [
  Array [
    Object {
      "type": "FETCH_PATIENTSACTIVITY_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "FETCH_PATIENTSACTIVITY_FAILURE",
    },
  ],
]
`;

exports[`patient actions fetchPatientsActivityFailure() 1`] = `
Object {
  "type": "FETCH_PATIENTSACTIVITY_FAILURE",
}
`;

exports[`patient actions fetchPatientsActivityRequest() 1`] = `
Object {
  "type": "FETCH_PATIENTSACTIVITY_REQUEST",
}
`;

exports[`patient actions fetchPatientsActivityResponse() 1`] = `
Object {
  "activities": Array [
    1,
    2,
    3,
  ],
  "type": "FETCH_PATIENTSACTIVITY_RESPONSE",
}
`;

exports[`patient actions fetchPatientsFailure() 1`] = `
Object {
  "type": "FETCH_PATIENTS_FAILURE",
}
`;

exports[`patient actions fetchPatientsRequest() 1`] = `
Object {
  "type": "FETCH_PATIENTS_REQUEST",
}
`;

exports[`patient actions fetchPatientsResponse() 1`] = `
Object {
  "patients": Array [
    1,
    2,
    3,
  ],
  "type": "FETCH_PATIENTS_RESPONSE",
}
`;

exports[`patient actions setList 1`] = `
Object {
  "patients": Array [
    1,
    2,
    3,
  ],
  "type": "SET_LIST",
}
`;
